# llama2-practice

./: .gitignore  README.md  app.py  generator.py  ingest.py  pyproject.toml  rag.py  retriever.py
